# fourier-option-pricer

./: .gitignore  01_mc_baseline.ipynb  02_carr_madan.ipynb  README-II.md  README.md  env.yml  methodology_and_results.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
benchmarks/: __init__.py  phase1_mc_baseline.py  phase3_frft_vs_cm.py  phase5_calibration.py
benchmarks/cos_method_improved/outputs/: cos_method_improved_paper_compare.csv  cos_method_improved_summary.csv  heston_t10_policy_comparison.csv  heston_t10_series_vs_coeff_error.csv  heston_t10_support_error.csv
benchmarks/mc_vs_fourier_methods/outputs/: benchmark_policy.csv  bsm_mc_vs_carr_madan.csv  cross_model_best_summary.csv  cross_model_family_error_summary.csv  cross_model_family_runtime_summary.csv  cross_model_hybrid_benchmark_fallbacks.csv  cross_model_results.csv  cross_model_taxonomy.csv  heston_cm_sensitivity.csv  heston_cos_plain.csv  heston_cos_plain_prices.csv  heston_cos_truncation_stress.csv  heston_transform_summary.csv
benchmarks/paper_replications/: __init__.py
benchmarks/paper_replications/fo2008_cos/: __init__.py  params.py
foureng/greeks/: __init__.py  cos_greeks.py
foureng/iv/: implied_vol.py
foureng/mc/: heston_conditional_mc.py
foureng/models/: _pyfeng_backend.py  bates.py  heston.py  ousv.py
foureng/pricers/: carr_madan.py  frft.py
foureng/refs/: __init__.py  paper_refs.py
foureng/surface/: calibration.py  vol_surface.py
foureng/utils/: cumulants.py  frft.py  grids.py  interp.py  numerics.py  validity.py
foureng/viz/: __init__.py
notebooks/: 00_demo_prechoi_to_pc_v2.ipynb  cosPaper_Replication.ipynb  cos_method_improved.ipynb  demo-deprecated.ipynb  demo.ipynb  demo_story_prechoi_to_pc.ipynb  fo2008_replication.ipynb  presentation_fourier_methods.ipynb
scripts/: benchmark_pyfeng.py  build_cos_method_improved_notebook.py  build_demo_mk2_notebook.py  build_demo_notebook.py  build_demo_notebook_v2.py  build_presentation_notebook.py  build_submission_notebooks.py  strip_html_from_notebooks.py
src/foureng/: __init__.py  pipeline.py
src/foureng/char_func/: _pyfeng_backend.py  base.py  bsm.py  heston.py  heston_cgmy.py  kou.py  nig.py  variance_gamma.py
src/foureng/greeks/: cos_greeks.py
src/fourier_option_pricer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_bates_cos_vs_frft_hi_res.py  test_bates_reduces_to_heston.py  test_bates_regression_strip.py  test_bsm_adapter.py  test_cgmy_adapter.py  test_cos_improved_policy.py  test_cos_kou_sweep_vs_fft_frft.py  test_cos_vs_pyfeng_fft_heston_vg.py  test_fft_using_pyfeng_cf_matches_pyfeng_price.py  test_heston_cgmy_cos_vs_frft_hi_res.py  test_heston_cgmy_reduces_to_heston.py  test_heston_cgmy_regression_strip.py  test_heston_kou_cos_vs_frft_hi_res.py  test_heston_kou_reduces_to_heston.py  test_heston_kou_regression_strip.py  test_implied_vol_utility.py  test_nig_adapter.py  test_ousv_adapter.py  test_phase1_mc_baseline.py  test_phase2_carr_madan_vg.py  test_phase3_frft.py  test_phase4_alpha_validity.py  test_phase4_cos_heston_fo2008.py  test_phase4_cos_kou.py  test_phase5_calibration.py  test_phase6_control_variate.py  test_phase6_greeks.py  test_phase7_public_api.py  test_pyfeng_cf_wrappers.py  test_robustness_parametrize.py
(+35 files in other folders)
