[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fourier-option-pricer"
version = "0.1.0"
description = "Fourier-based option pricing: Carr-Madan FFT, FRFT, COS with CF models (Heston/VG/Kou) and MC baselines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.10",
  "matplotlib>=3.7",
  # Heston and VG characteristic functions delegate to PyFENG
  # (Prof. Choi's library); Bates reuses the PyFENG-backed Heston CF.
  # Kou remains in-house (PyFENG has no Kou model).
  "pyfeng>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "jupyter>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: tests that take more than a second (deselect with -m 'not slow')",
]
